play around with label group spacing issues

--- a/assets/less/sugar/component/forums.less
+++ b/assets/less/sugar/component/forums.less
@@ -154,7 +154,7 @@
         line-height: 1;
 
         display: inline-block;
-        margin-left: 1px;
+        margin-right: 2px;
     }
 
     @media (min-width: @screen-m-min) { 
@@ -163,7 +163,8 @@
             border-radius: 0;
 
             display: inline-flex;
-            float: right;       
+            float: right;
+
 
             > dfn { 
                 font-weight: 700;
@@ -183,9 +184,9 @@
             }
 
             &:first-child { .margin-bottom(@quarter-spacing-unit); }
+
         }  
     }
-
 }
 
 /**
